--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
 
 //	jpa
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 
 //	jwt 0.11버전 라이브러리 추가
@@ -66,16 +66,12 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-def querydslDir = "$buildDir/generated/querydsl"
+//def querydslDir = "$buildDir/generated/querydsl"
 
-sourceSets {
-	main.java.srcDirs += [querydslDir]
-}
+/
 
-tasks.withType(JavaCompile) {
-	options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
-}
+/
 
-clean.doLast {
-	file(querydslDir).deleteDir()
-}
+//clean.doLast {
+//	file(querydslDir).deleteDir()
+//}
